--- a/Zip/index.html
+++ b/Zip/index.html
@@ -1,69 +1,67 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Welcome to Firebase Hosting</title>
-    <style media="screen">
-      body {
-        font-family: Roboto, Arial, sans-serif;
-        background: #ECEFF1;
-        color: rgba(0,0,0,0.87);
-      }
-
-      a {
-        color: rgb(3,155,229);
-      }
-
-      #message {
-        max-width: 400px;
-        margin: 40px auto;
-        box-shadow: 0 1px 3px 0 rgba(0,0,0,0.2),0 1px 1px 0 rgba(0,0,0,0.14),0 2px 1px -1px rgba(0,0,0,0.12);
-        border-radius: 2px;
-        background: white;
-        padding: 16px 24px;
-      }
-
-      #message h1 {
-        font-size: 22px;
-        font-weight: 500;
-        text-align: center;
-        margin: 0 0 16px;
-      }
-
-      #message p {
-        font-weight: 300;
-        line-height: 150%;
-      }
-
-      #message ul {
-        list-style: none;
-        margin: 16px 0 0;
-        padding: 0;
-        text-align: center;
-      }
-
-      #message li a {
-        display: inline-block;
-        padding: 8px;
-        text-transform: uppercase;
-        text-decoration: none;
-        font-weight: 500;
-        background: rgb(3,155,229);
-        color: white;
-        border: 1px solid rgb(3,155,229);
-        border-radius: 3px;
-        font-size: 14px;
-        box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h1>Welcome to Firebase Hosting</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <ul>
-        <li><a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a></li>
-      </ul>
-    </div>
-  </body>
+<title>Shopping Time</title>
+<head>
+	<link href="index.css" type="text/css" rel="stylesheet"/>  	
+</head>
+<body>
+<h1><u><i>Online Shopping Website</i></u></h1>
+<p>
+<a href="index.html"><button>Home</button></a>   
+<a href="About us/aboutus.html"><button>About Us</button></a>
+<select name=categories onchange="location = this.value;" >
+	<option value="Categories/categories.html">Categories</option>
+	<option value="CellPhones/cellphone.html">Smart Phones</option>
+	<option value="BarPhones/barphones.html">Bar Phones</option>
+	<option value="Laptops/laptops.html">Laptops</option>
+	<option value="Lcd/lcd.html">LCDs</option>
+	<option value="Tabs/tablets.html">Tablet PCs</option>
+	<option value="Desktop/desktop.html">Desktop</option>
+</select>	
+<a href="Careers/careers.html"><button>Careers</button></a>
+<a href="../faqs.html"><button>FAQs</button></a>
+</p>
+ <div class="wrap">
+	<div class="cube">
+		<div class="front"><img src="images/t4.jpg" width="100%" height="100px" /></div>
+		<div class="back"><img src="images/b4.jpg" width="100%" height="100px" /></div>
+		<div class="top"><img src="images/lcd1.jpg" width="100%" height="100px"/></div>
+		<div class="bottom"><img src="images/l1.jpg" width="100%" height="100px"/></div>
+		<div class="left"><img src="images/d1.jpg" width="100%" height="100px"/></div>
+		<div class="right"><img src="images/m2.jpg" width="100%" height="100px"/></div>
+	</div>
+</div>		
+</br>	
+	
+	<div id=maindiv>
+	<table border>
+	<td>
+	<tr><a href="./CellPhones/cellphone.html"><img src="images\m3.jpg" width="50%" height="350px"/></a></tr>
+	<tr><a href="./Laptops/laptops.html"><img src="images\laptops.jpg" width=50% height=350px/></a></tr>
+	<tr><a href="./Lcd/lcd.html"><img src="images\lcd_monitor.jpg" width=50% height=350px/></a></tr>	
+	<tr><a href="./BarPhones/barphones.html"><img src="images\bar phone.jpg" width=50% height=350px/></a></tr>
+	<tr><a href="./Desktop/desktop.html"><img src="images\desktop.jpg" width=50% height=350px/></a></tr>
+	<tr><a href="./Tabs/tablets.html"><img src="images\tab.jpg" width=50% height=350px /></tr>			
+	</td>
+	</table>
+	</div></br></br></br>
+<div id="footer">
+	</br><hr/>
+	<h2><u>Online Shopping Website</u></h2>
+        <h4>Making Shopping Easier</br></h4>
+<a href="mainpage.html"> Home |</a>
+<a href="aboutus.html"> About Us |</a>
+<a href="categories.html"> Categories |</a>
+<a href="careers.html"> Careers |</a>
+<a href="faqs.html"> FAQs |</a>
+</br>
+<table border>
+	<td>
+	<tr><img src="images\facebook.png" width=5% height=50px/>
+	<tr><img src="images\ebay.jpg" width=5% height=50px />
+	<tr><img src="images\insta.jpg" width=5% height=50px />
+	<tr><img src="images\linkdin.png" width=5% height=50px />	
+	
+</td> 
+</div>
+</body>
 </html>
